Fix incorrect content witdth on small screens
Fixes #93

--- a/styles/pages/_page.scss
+++ b/styles/pages/_page.scss
@@ -42,6 +42,9 @@
 }
 
 @include media-query(palm) {
+  .page__container {
+    display: block;
+  }
   .page__sidebar {
     display: none;
   }
